Fixed FAQ Collapse (Added card around it)

--- a/React/CoTeach/src/components/loginPage.css
+++ b/React/CoTeach/src/components/loginPage.css
@@ -124,6 +124,11 @@
         width: "10%";
         height: "10%";
     }
+
+    .FAQMargin {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
   }
 
 
